# mp2-lab2-matrix

./: CMakeLists.txt
gtest/: CMakeLists.txt
include/: TArithmeticExpression.h  TDynamicStack.h  tmatrix.h
src/: TArithmeticExpression.cpp  main.cpp
test/: CMakeLists.txt  test_TArithmeticExpression.cpp  test_TDynamicStack.cpp  test_main.cpp  test_tmatrix.cpp  test_tvector.cpp
